updated introduction string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,5 @@
     <string name="exit">Exit</string>
     <string name="skip">Skip</string>
 
-    <string name="app_introduction">With the power of local and remote chat bots, I will try to answer to you. Here is some examples of what you can tell me.</string>
+    <string name="app_introduction">With the power of local and remote chat bots, I will try to reply to what you will say. Here are some examples of things you can tell me.</string>
 </resources>
