added quotes to suggestions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ChatbotSample</string>
     <string name="qichatbot">QiChatBot</string>
     <string name="dialog_flow">Dialog Flow</string>
+    <string name="suggestion_format">\"%s\"</string>
 
 
     <!-- Globals -->
