--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="skip">Skip</string>
 
     <string name="app_introduction">With the power of local and remote chat bots, I will try to reply to what you will say. Here are some examples of things you can tell me.</string>
+    <string name="you_can_say">you can say…</string>
 </resources>
